--- a/pages/pets/pets.html
+++ b/pages/pets/pets.html
@@ -23,7 +23,7 @@
                     <div class="menu-dropdown">
                     <ul class="nav-menu">
                        <li class="nav__item">
-                            <a href="#" class="nav__link nav__link_disabled">
+                            <a href="../main/main.html" class="nav__link nav__link_disabled">
                                About the shelter
                             </a>
                         </li>
